--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </div>
 </div>
 <div id="search"></div>
-<div id="movie__cards"></div>
+<div id="movie__cards" class="row"></div>
+<!---->
+
 
 
 
