figured del function

--- a/index.html
+++ b/index.html
@@ -72,6 +72,52 @@
 <!---->
 
 
+<div id="edit_form" class="popup_form none">
+    <form>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="Edit_Title">Title</label>
+                <input class="form-control" id="Edit_Title">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="Edit_Rating">Rating</label>
+                <input class="form-control" id="Edit_Rating">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="Edit_Year">Year</label>
+            <input class="form-control" id="Edit_Year">
+        </div>
+        <div class="form-group">
+            <label for="Edit_Director">Director</label>
+            <input class="form-control" id="Edit_Director">
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="Edit_Plot">Plot</label>
+                <input class="form-control" id="Edit_Plot">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="Edit_Genre">Genre</label>
+                <select id="Edit_Genre" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>Horror</option>
+                    <option>Sci-Fi</option>
+                    <option>ROMCOM</option>
+                    <option>Adventure</option>
+                    <option>Action</option>
+                    <option>Drama</option>
+                    <option>Family</option>
+                </select>
+            </div>
+            <div class="form-group col-md-2">
+                <label for="Edit_Actors">Actors</label>
+                <input type="text" class="form-control" id="Edit_Actors">
+            </div>
+        </div>
+        <button id="Edit_btn" class="btn btn-primary">Submit</button>
+    </form>
+</div>
 
 
 
