--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <title>Document</title>
 </head>
 <body>
+
+<div id="loading_Screen">
+    <div class="blackScreen"></div>
+    <div class="loading"></div>
+</div> <!--divider for the loading screen and all its pieces-->
+
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-4">MOVIES</h1>
