--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!--    google font-->
+    <!--    google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Hahmlet:wght@100;200&family=Love+Ya+Like+A+Sister&family=Montserrat+Alternates:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Hahmlet:wght@100;200&family=Love+Ya+Like+A+Sister&family=Montserrat+Alternates:wght@100&display=swap"
+          rel="stylesheet">
     <!--    bootstrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -29,116 +31,73 @@
 </div>
 <div id="header">
     <div id="search"></div>
-<div id="Add_form" class="popup_form none">
-<form>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="input_Title">Title</label>
-            <input class="form-control" id="input_Title">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="input_Rating">Rating</label>
-            <input class="form-control" id="input_Rating">
-        </div>
+    <div id="form" class="formBackground none">
+    <div class="popup_form">
+        <button id="close">X</button>
+        <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="input_Title">Title</label>
+                        <input class="form-control" id="input_Title">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="input_Rating">Rating</label>
+                        <input class="form-control" id="input_Rating">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="input_Year">Year</label>
+                    <input class="form-control" id="input_Year">
+                </div>
+                <div class="form-group">
+                    <label for="input_Director">Director</label>
+                    <input class="form-control" id="input_Director">
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="input_Plot">Plot</label>
+                        <input class="form-control" id="input_Plot">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="input_Genre">Genre</label>
+                        <select id="input_Genre" class="form-control">
+                            <option selected>Choose...</option>
+                            <option>Horror</option>
+                            <option>Sci-Fi</option>
+                            <option>ROMCOM</option>
+                            <option>Adventure</option>
+                            <option>Action</option>
+                            <option>Drama</option>
+                            <option>Family</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-2">
+                        <label for="input_Actors">Actors</label>
+                        <input type="text" class="form-control" id="input_Actors">
+                    </div>
+                </div>
+                <button id="Edit_btn" class="btn btn-primary none">edit</button>
+                <button id="add_btn" class="btn btn-primary none">Submit</button>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="input_Year">Year</label>
-        <input class="form-control" id="input_Year">
-    </div>
-    <div class="form-group">
-        <label for="input_Director">Director</label>
-        <input class="form-control" id="input_Director">
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="input_Plot">Plot</label>
-            <input class="form-control" id="input_Plot">
-        </div>
-        <div class="form-group col-md-4">
-            <label for="input_Genre">Genre</label>
-            <select id="input_Genre" class="form-control">
-                <option selected>Choose...</option>
-                <option>Horror</option>
-                <option>Sci-Fi</option>
-                <option>ROMCOM</option>
-                <option>Adventure</option>
-                <option>Action</option>
-                <option>Drama</option>
-                <option>Family</option>
-            </select>
-        </div>
-        <div class="form-group col-md-2">
-            <label for="input_Actors">Actors</label>
-            <input type="text" class="form-control" id="input_Actors">
-        </div>
-    </div>
-    <button id="add_btn" class="btn btn-primary">Submit</button>
-</form>
-    </div>
-    <button id="open_form" class="btn btn-primary">Add A Movie</button>
+</div>
+<button id="open_form_add" class="btn btn-primary">Add A Movie</button>
 </div>
 <div class="w-100 m-5"></div>
 <div id="movie__cards" class="row"></div>
 <!---->
 
 
-<div id="edit_form" class="popup_form none">
-    <form>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="Edit_Title">Title</label>
-                <input class="form-control" id="Edit_Title">
-            </div>
-            <div class="form-group col-md-6">
-                <label for="Edit_Rating">Rating</label>
-                <input class="form-control" id="Edit_Rating">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="Edit_Year">Year</label>
-            <input class="form-control" id="Edit_Year">
-        </div>
-        <div class="form-group">
-            <label for="Edit_Director">Director</label>
-            <input class="form-control" id="Edit_Director">
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="Edit_Plot">Plot</label>
-                <input class="form-control" id="Edit_Plot">
-            </div>
-            <div class="form-group col-md-4">
-                <label for="Edit_Genre">Genre</label>
-                <select id="Edit_Genre" class="form-control">
-                    <option selected>Choose...</option>
-                    <option>Horror</option>
-                    <option>Sci-Fi</option>
-                    <option>ROMCOM</option>
-                    <option>Adventure</option>
-                    <option>Action</option>
-                    <option>Drama</option>
-                    <option>Family</option>
-                </select>
-            </div>
-            <div class="form-group col-md-2">
-                <label for="Edit_Actors">Actors</label>
-                <input type="text" class="form-control" id="Edit_Actors">
-            </div>
-        </div>
-        <button id="Edit_btn" class="btn btn-primary">Submit</button>
-    </form>
-</div>
-
-
-
-
-
-
 <!--bootstrap-->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
 <!--jquery-->
-<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+        crossorigin="anonymous"></script>
 
 <!--js -->
 <script src="script.js"></script>
