--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <h1 class="display-4">MOVIES</h1>
-        <p class="lead">WELCOME to MOVIE APP.</p>
+        <h1 class="display-4">MOVIPEDIA</h1>
+        <p class="lead">WELCOME to our MOVIE APP.</p>
     </div>
 </div>
 <div id="header">
