--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Hahmlet:wght@100;200&family=Love+Ya+Like+A+Sister&family=Montserrat+Alternates:wght@100&display=swap" rel="stylesheet">
     <!--    bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+<!--    CSS-->
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+<!--    favicon-->
+    <link rel="icon" type='image-x-icon' href="assets/favicon%20copy.png">
+
+    <title>Reel Knowledge</title>
 </head>
 <body>
 
@@ -23,10 +27,11 @@
 
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <h1 class="display-4">MOVIES</h1>
-        <p class="lead">WELCOME to MOVIE APP.</p>
+<!--        <h1 class="display-4">MOVIES</h1>-->
+<!--        <p class="lead">WELCOME to MOVIE APP.</p>-->
     </div>
 </div>
+
 <div id="header">
     <div id="search"></div>
 <div id="Add_form" class="popup_form none">
@@ -75,7 +80,7 @@
     <button id="add_btn" class="btn btn-primary">Submit</button>
 </form>
     </div>
-    <button id="open_form" class="btn btn-primary">Add A Movie</button>
+    <button id="open_form" class="btn btn-ig btn-block">Add A Movie</button>
 </div>
 <div class="w-100 m-5"></div>
 <div id="movie__cards" class="row"></div>
