corrected form error. loading screen is underneath jumbotron. need to come back later and make it better

--- a/index.html
+++ b/index.html
@@ -8,18 +8,13 @@
     <!--    google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Hahmlet:wght@100;200&family=Love+Ya+Like+A+Sister&family=Montserrat+Alternates:wght@100&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Hahmlet:wght@100;200&family=Love+Ya+Like+A+Sister&family=Montserrat+Alternates:wght@100&display=swap" rel="stylesheet">
     <!--    bootstrap-->
-<<<<<<< HEAD
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-<!--    CSS-->
-=======
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
->>>>>>> 5cc212d291bf67c0f5a85445114bd1d8ffdff7a3
+    <!--    CSS-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-<!--    favicon-->
+    <!--    favicon-->
     <link rel="icon" type='image-x-icon' href="assets/favicon%20copy.png">
 
     <title>Reel Knowledge</title>
@@ -33,13 +28,9 @@
 
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-<<<<<<< HEAD
-<!--        <h1 class="display-4">MOVIES</h1>-->
-<!--        <p class="lead">WELCOME to MOVIE APP.</p>-->
-=======
+
         <h1 class="display-4">MOVIPEDIA</h1>
         <p class="lead">WELCOME to our MOVIE APP.</p>
->>>>>>> 5cc212d291bf67c0f5a85445114bd1d8ffdff7a3
     </div>
 </div>
 
@@ -94,51 +85,12 @@
                 <button id="add_btn" class="btn btn-primary none">Submit</button>
         </form>
     </div>
-<<<<<<< HEAD
-    <div class="form-group">
-        <label for="input_Year">Year</label>
-        <input class="form-control" id="input_Year">
     </div>
-    <div class="form-group">
-        <label for="input_Director">Director</label>
-        <input class="form-control" id="input_Director">
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="input_Plot">Plot</label>
-            <input class="form-control" id="input_Plot">
-        </div>
-        <div class="form-group col-md-4">
-            <label for="input_Genre">Genre</label>
-            <select id="input_Genre" class="form-control">
-                <option selected>Choose...</option>
-                <option>Horror</option>
-                <option>Sci-Fi</option>
-                <option>ROMCOM</option>
-                <option>Adventure</option>
-                <option>Action</option>
-                <option>Drama</option>
-                <option>Family</option>
-            </select>
-        </div>
-        <div class="form-group col-md-2">
-            <label for="input_Actors">Actors</label>
-            <input type="text" class="form-control" id="input_Actors">
-        </div>
-    </div>
-    <button id="add_btn" class="btn btn-primary">Submit</button>
-</form>
-    </div>
-    <button id="open_form" class="btn btn-ig btn-block">Add A Movie</button>
-=======
-</div>
 <button id="open_form_add" class="btn btn-primary">Add A Movie</button>
->>>>>>> 5cc212d291bf67c0f5a85445114bd1d8ffdff7a3
 </div>
 <div class="w-100 m-5"></div>
 <div id="movie__cards" class="row"></div>
 <!---->
-
 
 <!--bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
