--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
 
-        <h1 class="display-4">MOVIPEDIA</h1>
-        <p class="lead">WELCOME to our MOVIE APP.</p>
+<!--        <h1 class="display-4">MOVIPEDIA</h1>-->
+<!--        <p class="lead">WELCOME to our MOVIE APP.</p>-->
     </div>
 </div>
 
@@ -86,10 +86,11 @@
         </form>
     </div>
     </div>
-<button id="open_form_add" class="btn btn-primary">Add A Movie</button>
+<button id="open_form_add" class="btn btn-primary w-100" >Add A Movie</button>
 </div>
 <div class="w-100 m-5"></div>
-<div id="movie__cards" class="row"></div>
+<div class="test"></div>
+<div id="movie__cards" class="row justify-content-between p-5"></div>
 <!---->
 
 <!--bootstrap-->
