added gradient to jumbotron. make it look alittle cooler. working on adda movie btn style

--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
     <div class="loading"></div>
 </div> <!--divider for the loading screen and all its pieces-->
 
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-
+<div class="jumbotron jumbotron-fluid m-0 p-0">
+    <div class="m-0 p-0">
 <!--        <h1 class="display-4">MOVIPEDIA</h1>-->
 <!--        <p class="lead">WELCOME to our MOVIE APP.</p>-->
     </div>
 </div>
-
+<div id="header-top"></div>
 <div id="header">
     <div id="search"></div>
     <div id="form" class="formBackground none">
@@ -86,7 +85,10 @@
         </form>
     </div>
     </div>
-<button id="open_form_add" class="btn btn-primary w-100" >Add A Movie</button>
+
+</div>
+<div class="text-center">
+    <button id="open_form_add" class="w-50 btn">Add A Movie</button>
 </div>
 <div class="w-100 m-5"></div>
 <div class="test"></div>
