--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!--        <p class="lead">WELCOME to our MOVIE APP.</p>-->
     </div>
 </div>
-<div id="header-top"></div>
+<div id="header-top py-3"></div>
 <div id="header">
     <div id="search"></div>
     <div id="form" class="formBackground none">
@@ -87,8 +87,8 @@
     </div>
 
 </div>
-<div class="text-center">
-    <button id="open_form_add" class="w-50 btn">Add A Movie</button>
+<div id="open_form_add" class="addAMov d-flex text-center align-items-center mt-3 btn">
+    <div  class="w-100">Add A Movie</div>
 </div>
 <div class="w-100 m-5"></div>
 <div class="test"></div>
