--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="loading"></div>
 </div> <!--divider for the loading screen and all its pieces-->
 
-<div class="jumbotron jumbotron-fluid m-0 p-0">
+<div class="jumbotron m-0 p-0">
     <div class="m-0 p-0">
 <!--        <h1 class="display-4">MOVIPEDIA</h1>-->
 <!--        <p class="lead">WELCOME to our MOVIE APP.</p>-->
