updated code. quick break

--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
 
 <div id="loading_Screen">
     <div class="blackScreen"></div>
-    <div class="loading"></div>
+    <div id="load">
+        <div>G</div>
+        <div>N</div>
+        <div>I</div>
+        <div>D</div>
+        <div>A</div>
+        <div>O</div>
+        <div>L</div>
+    </div>
 </div> <!--divider for the loading screen and all its pieces-->
 
 <div class="jumbotron m-0 p-0">
