--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="search"></div>
     <div id="form" class="formBackground none">
     <div class="popup_form">
-        <button id="close" class="close"><i class="fa-solid fa-trash-can"></i> Close this form</button>
+        <button id="close" class="close btn-design"><i class="fa-solid fa-trash-can"></i> Close this form</button>
         <form>
                 <div class="form-row">
                     <div class="form-group col-md-6">
