--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         crossorigin="anonymous"></script>
 
 <!--js -->
+<script type="text/javascript" src="assets/vanilla-tilt.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
