--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
 
 <div class="jumbotron m-0 p-0">
     <div class="m-0 p-0">
-<!--        <h1 class="display-4">MOVIPEDIA</h1>-->
-<!--        <p class="lead">WELCOME to our MOVIE APP.</p>-->
     </div>
 </div>
+
 
 
 <div id="header-top py-3"></div>
@@ -106,7 +105,7 @@
 <div class="w-100 m-5"></div>
 <div id="movie__cards" class="row justify-content-center p-5"></div>
 <!---->
-
+<div id="fullScreen" class="none"></div>
 <!--bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
