--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@
                         <input type="text" class="form-control" id="input_Actors">
                     </div>
                 </div>
+            <div class="text-center">
             <img src='assets/button2.png' alt='Edit' id="Edit_btn" class='edit text-left none' height='50px' width='80px' style="cursor: pointer">
                 <!--<button id="Edit_btn" class="btn btn-primary none">edit</button>-->
                 <!--<button id="add_btn" class="btn btn-primary none">Submit</button>-->
             <img src='assets/button3.png' alt='submit' id="add_btn" class='text-left none' height='50px' width='80px' style="cursor: pointer">
+            </div>
         </form>
     </div>
     </div>
@@ -105,7 +107,7 @@
 <div class="w-100 m-5"></div>
 <div id="movie__cards" class="row justify-content-center p-5"></div>
 <!---->
-<div id="fullScreen" class="none"></div>
+<div id="fullScreen" class="fullScreen none"></div>
 <!--bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
